// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Screen
  navBarStyle="context"
  title="Due Dates"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`renders with overrides 1`] = `
<Screen
  navBarStyle="context"
  title="Due Dates"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      style={
        Object {
          "flex": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingTop": 16,
            }
          }
          testID="123456"
        >
          <Text
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 24,
                  "fontWeight": "800",
                },
                undefined,
              ]
            }
          >
            Due May 31, 2037 at 11:59 PM
          </Text>
          <View
            accessible={true}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontWeight": "500",
                    "paddingTop": 16,
                  },
                ]
              }
            >
              For
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "paddingBottom": 16,
                  },
                ]
              }
            >
              due
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#C7CDD1",
                "height": 0.5,
              }
            }
          />
          <View
            accessibilityLabel="Available from: Mar 17, 2017 at 12:00 AM"
            accessible={true}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontWeight": "500",
                    "paddingTop": 16,
                  },
                ]
              }
            >
              Available From
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "paddingBottom": 16,
                  },
                ]
              }
            >
              Mar 17, 2017 at 12:00 AM
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#C7CDD1",
                "height": 0.5,
              }
            }
          />
          <View
            accessibilityLabel="Available until: May 31, 2037 at 11:59 PM"
            accessible={true}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontWeight": "500",
                    "paddingTop": 16,
                  },
                ]
              }
            >
              Available Until
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "paddingBottom": 16,
                  },
                ]
              }
            >
              May 31, 2037 at 11:59 PM
            </Text>
          </View>
          <View
            style={
              Object {
                "backgroundColor": "#C7CDD1",
                "height": 0.5,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;
